--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -1,8 +1,42 @@
 @import 'normalize.css';
-@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&display=swap');
-
 :root{
     --primary: #fe2c55;
+    --text-color: #161823;
+    --white: #ffffff;
+    --font-family: 'TikTokFont', Arial, Tahoma, sans-serif;
+}
+// Fonts embeded
+
+@font-face {
+    font-family: TikTokFont;
+    src: url('~/assets/fonts/TikTokFont-Regular.woff2') ;
+    font-weight: 400;
+}
+@font-face {
+    font-family: TikTokFont;
+    src: url('~/assets/fonts/TikTokFont-Semibold.woff2') ;
+    font-weight: 600;
+}
+@font-face {
+    font-family: TikTokFont;
+    src: url('~/assets/fonts/TikTokFont-Bold.woff2') ;
+    font-weight: 700;
+}
+
+@font-face {
+    font-family: TikTokDisplayFont;
+    src: url('~/assets/fonts/TikTokDisplayFont-Regular.woff2') ;
+    font-weight: 400;
+}
+@font-face {
+    font-family: TikTokDisplayFont;
+    src: url('~/assets/fonts/TikTokDisplayFont-Semibold.woff2') ;
+    font-weight: 600;
+}
+@font-face {
+    font-family: TikTokDisplayFont;
+    src: url('~/assets/fonts/TikTokDisplayFont-Bold.woff2') ;
+    font-weight: 700;
 }
 
 *{
@@ -15,9 +49,60 @@ html{
     font-size: 62.5%;
 }
 
+// Scroll bar
+html ::-webkit-scrollbar {
+    border-radius: 0px;
+    width: 8px;
+}
+
+html *::-webkit-scrollbar-thumb {
+    border-radius: 4px;
+    background-color: rgba(22, 24, 35, .06);
+}
+
+html *::-webkit-scrollbar-track {
+    border-radius: 0;
+    background-color: rgba(0, 0, 0, 0);
+}
+
 body{
-    font-family: "IBM Plex Sans", serif;
+    font-family: var(--font-family);
     font-size: 1.6rem;
     line-height: 1.5;
     text-rendering: optimizeSpeed;
+    color: var(--text-color);
 }
+
+button, input, [tabindex]{
+    outline: none;
+    border: none;
+}
+
+a{
+    color: var(--text-color);
+    text-decoration: none;
+}
+
+
+// Custum tippy tooltip
+
+body{
+    .tippy-box {
+        border-radius: 8px;
+        font-weight: 600;
+        font-size: 1.6rem;
+        line-height: 2.1rem;
+        background-color: rgba(84, 84, 84, 0.92);
+    }
+    .tippy-content {
+        padding: 8px;
+    }
+    .tippy-arrow {
+        width: 16px;
+        height: 16px;
+        color: rgba(84, 84, 84, 0.92);
+    }
+    .tippy-box[data-placement^=bottom]>.tippy-arrow:before {
+        top: -8px;
+    }
+}   
