--- a/src/layouts/components/Sidebar/Menu/Menu.module.scss
+++ b/src/layouts/components/Sidebar/Menu/Menu.module.scss
@@ -10,7 +10,7 @@
     transition: background 200ms ease-in-out;
 
     &:hover{
-        background: rgba(22, 24, 35, 0.03);
+        background-color: var(--tiktok-neutral-color);
     }
 
     svg{
