--- a/src/components/AccountItem/AccountItem.module.scss
+++ b/src/components/AccountItem/AccountItem.module.scss
@@ -2,10 +2,11 @@
     display: flex;
     align-items: center;
     padding: 9px 16px;
+    background-color: var(--popup-bg-color);
     cursor: pointer;
 
     &:hover{
-        background: rgba(22, 24, 35, 0.03);
+        background-color: var(--tiktok-neutral-color);
     }
 }
 
@@ -25,7 +26,7 @@
 .name {
     font-size: 1.4rem;
     line-height: 18px;
-    color: rgba(22, 24, 35, 0.5);
+    color: var(--text-color-3);
     font-weight: 500;
     
 
