--- a/src/components/Article/Action/Action.module.scss
+++ b/src/components/Article/Action/Action.module.scss
@@ -32,12 +32,13 @@
     bottom: 0px;
     left: 50%;
     transform: translate(-50%, 50%);
-    color: var(--white);
+    color: var(--text-color);
     background-color: var(--primary);
     border-color: var(--primary);
     cursor: pointer;
 }
 .avatar-follow-button-content{
+    color: var(--white);
     width: 1005;
     display: flex;
     align-items: center;
@@ -52,6 +53,7 @@
     -webkit-box-align: center;
     align-items: center;
     cursor: pointer;
+    color: var(--text-color);
     flex-direction: column;
 }
 .button-icon-wrapper{
@@ -65,12 +67,12 @@
     border-radius: 50%;
     font-size: 0px;
     transition: 200ms ease-in-out;
-    background-color: rgba(22, 24, 35, 0.06);
+    background-color: var(--tiktok-background-color-1);
     cursor: pointer;
 }
 .button-text{
     font-size: 1.2rem;
     line-height: 1.6rem;
-    color: rgba(22, 24, 35, 0.75);
+    color: var(--text-color-1);
     text-align: center;
 }
