--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -16,8 +16,8 @@
     }
 
     &.disabled{
-        pointer-events: none;
-        opacity: 0.5;
+        cursor: not-allowed;
+        opacity: 0.4;
     }
 
 }
@@ -28,7 +28,8 @@
     padding: 0px 8px;
     font-weight: 700;
     font-size: 1.4rem;
-    color: rgba(22, 24, 35, 0.75);
+    color: var(--text-color-1);
+    background-color: var(--rounded-bg);
     box-shadow: rgba(0, 0, 0, 0.06) 0px 2px 8px;
     border-radius: 52px;
     line-height: 30px;
