--- a/src/components/Popper/Menu/Menu.module.scss
+++ b/src/components/Popper/Menu/Menu.module.scss
@@ -10,11 +10,14 @@
 .header {
     display: flex;
     align-items: center;
+    background-color: var(--popup-bg-color);
+    
 }
 .back-btn {
     height: 50px;
     padding: 0;
     background: transparent;
+    color: var(--text-color);
     cursor: pointer;
 }
 .back-icon-btn {
@@ -44,14 +47,14 @@
     line-height: 21px;
     list-style: none;
     overflow-y: auto;
-    
+    background-color:var(--popup-bg-color);
+    color: var(--text-color);
 }
 
 .item-container {
     padding: 0px;
     display: flex;
     justify-content: space-between;
-    color: rgb(22, 24, 35);
     
     cursor: pointer;
 
@@ -68,10 +71,9 @@
     align-items: center;
     padding: 10px 8px 10px 16px;
     gap: 8px;
-    color: rgb(22, 24, 35);
 
     &:hover{
-        background: rgba(22, 24, 35, 0.03);
+        background-color: var(--tiktok-hover-background-color);
     }
 }
 
@@ -83,7 +85,7 @@
     background: transparent;
     
     &:hover{
-        background: rgba(22, 24, 35, 0.06);
+        background-color: var(--tiktok-hover-background-color);
     }
 }
 .icon{
