--- a/src/components/Popper/Popper.module.scss
+++ b/src/components/Popper/Popper.module.scss
@@ -5,6 +5,6 @@
     padding-inline-start: 0px;
     overflow: hidden auto;
     list-style-type: none;
-    background-color: var(--white);
+    background-color: var(--popup-bg-color);
     box-shadow: rgba(0, 0, 0, 0.12) 0px 2px 12px;
 }
