--- a/src/layouts/components/Header/Header.module.scss
+++ b/src/layouts/components/Header/Header.module.scss
@@ -13,8 +13,9 @@
     padding-left: 16px;
     top: 0px;
     position: fixed;
-    box-shadow: 0px 1px 1px rgb(0 0 0 / 12%);
-    background-color: #fff;
+    box-shadow: 0px 1px 1px var(--tiktok-hover-neutral-color);
+    background-color: var(--tiktok-background-color);
+    color: var(--text-color);
     z-index: 10;
 }
 
@@ -70,7 +71,7 @@
         min-width: 110px;
         padding: 0px 16px;
         height: 36px;
-        border: 1px solid rgba(22, 24, 35, 0.12);
+        border: 1px solid var(--tiktok-background-color-2);
         border-radius: 2px;
         cursor: pointer;
 
