--- a/src/layouts/components/Search/Search.module.scss
+++ b/src/layouts/components/Search/Search.module.scss
@@ -4,7 +4,7 @@
     flex-direction: row;
     align-items: center;
     padding: 12px 16px;
-    background: rgba(22, 24, 35, 0.06);
+    background: var( --tiktok-background-color-1);
     border-radius: 92px;
     overflow: hidden;
     z-index: 1;
@@ -24,15 +24,18 @@
     &:hover{
         outline: 1px solid #C5C6C9;  
         .search-icon{
-            fill: rgb(22, 24, 35, 0.75);
+            fill: var(--text-color-1);
         }
         .search-btn{
-            background-color: rgba(22, 24, 35, 0.06);
+            background-color: var(--tiktok-background-color-1);
         }
 
     }
+    .search-icon{
+        fill: var(--text-color-2);
+    }
     .search-icon-active {
-        fill: rgba(22, 24, 35, 0.75);
+        fill: var(--text-color-1);
     }
     
     &:focus-within {
@@ -43,7 +46,7 @@
         width: 1px;
         height: 28px;
         margin: -3px 0px;
-        background: rgba(22, 24, 35, 0.12);
+        background: var(--tiktok-background-color-2);
     }   
 
     .search-btn {
@@ -57,11 +60,13 @@
     }
     .reset-search-btn{
         display: flex;
+        background-color: transparent;
+        fill: var(--text-color-2);
     }
     .loading-icon{
         display: flex;
         margin: 0 16px;
-        color: rgba(22, 24, 35, 0.34);
+        color: var(--text-color-2);
         animation: spinner 0.8s linear infinite;
     }
 
@@ -85,7 +90,7 @@
         list-style-type: none;
         padding-inline-start: 0px;
         padding-top: 8px;
-        background: var(--white);
+        background-color: var(--popup-bg-color);
     }
 
     .search-title{
@@ -94,7 +99,7 @@
         font-size: 1.4rem;
         line-height: 18px;
         font-weight: 600;
-        color: rgba(22, 24, 35, 0.5);
+        color: var(--text-color-3)
     }
 }
 
