--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -6,6 +6,8 @@
     --text-color-1: #161823bf;
     --text-color-2: #16182357;
     --text-color-3: #16182380;
+    --text-color-4: #000000;
+    --text-color-5: #121212bf;
     --white: #ffffff;
     --font-family: 'TikTokFont', Arial, Tahoma, sans-serif;
     --tiktok-background-color: #ffffff;
@@ -25,6 +27,8 @@
     --text-color-1:#ffffffbf;
     --text-color-2:#868686ef;
     --text-color-3: #ffffff80;
+    --text-color-4: #f6f6f6;
+
     --tiktok-background-color: #000000; 
     --tiktok-hover-background-color: #ffffff0a;
     --tiktok-background-color-1: #ffffff1f;
