--- a/src/layouts/DefaultLayout/DefaultLayout.module.scss
+++ b/src/layouts/DefaultLayout/DefaultLayout.module.scss
@@ -1,4 +1,5 @@
 .wrapper{
+    height: 100%;
     display: flex;
     background-color: var(--tiktok-background-color);
     color: var(--text-color);
