--- a/src/pages/Profile/Profile.module.scss
+++ b/src/pages/Profile/Profile.module.scss
@@ -525,6 +525,78 @@
     vertical-align: middle;
     font-size: 1.6rem;
 }
+//skeleton
+.skeleton-profile{
+    display: flex;
+    flex-direction: row;
+    color: transparent;
+    line-height: 0;
+    margin-bottom: 25px;
+}
+
+.skeleton-avatar{
+    background-color: var(--tiktok-background-color-1);
+    background-image: linear-gradient(90deg, rgba(22, 24, 35, 0) 0%, rgba(22, 24, 35, 0.04) 50%, rgba(22, 24, 35, 0) 100%);
+    background-size: 200% 100%;
+    background-repeat: no-repeat;
+    border-radius: 100%;
+    animation: 1.5s cubic-bezier(0, 0, 1, 1) 0s infinite normal none running loading;
+    flex: 0 0 120px;
+    width: 120px;
+    height: 120px;
+    margin-right: 20px;
+}
+.skeleton-title-container{
+    padding-top: 15px;
+    margin-inline-start: 20px;
+}
+.skeleton-title{
+    background-color: var(--tiktok-background-color-1);
+    background-image: linear-gradient(90deg, rgba(22, 24, 35, 0) 0%, rgba(22, 24, 35, 0.04) 50%, rgba(22, 24, 35, 0) 100%);
+    background-size: 200% 100%;
+    background-repeat: no-repeat;
+    animation: 1.5s cubic-bezier(0, 0, 1, 1) 0s infinite normal none running loading;
+    width: 157px;
+    height: 19px;
+    border-radius: 2px;
+    margin-bottom: 12px;
+}
+
+.skeleton-card{
+    background-color: var(--tiktok-background-color-1);
+    background-image: linear-gradient(90deg, rgba(22, 24, 35, 0) 0%, rgba(22, 24, 35, 0.04) 50%, rgba(22, 24, 35, 0) 100%);
+    background-size: 200% 100%;
+    background-repeat: no-repeat;
+    min-height: 100px;
+    animation: 1.5s cubic-bezier(0, 0, 1, 1) 0s infinite normal none running loading;
+    width: calc(33% - 4px);
+    height: 94px;
+    margin-inline-end: 16px;
+    flex-shrink: 0;
+    border-radius: 4px;
+}
+
+.skeleton-post{
+    border-radius: 4px;
+    position: relative;
+    width: 100%;
+    padding-top: 132.692%;
+    background-color: var(--tiktok-background-color-1);
+    background-image: linear-gradient(90deg, rgba(22, 24, 35, 0) 0%, rgba(22, 24, 35, 0.04) 50%, rgba(22, 24, 35, 0) 100%);
+    background-size: 200% 100%;
+    background-repeat: no-repeat;
+    animation: 1.5s cubic-bezier(0, 0, 1, 1) 0s infinite normal none running loading;
+}
+
+
+@keyframes loading {
+    0% {
+        background-position-x: 200%;
+    }
+    100% {
+        background-position-x: -150%;
+    }
+}
 
 
 @media screen and (min-width: 1024px) {
